--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - _v1alpha1_game.yaml
+- _v1alpha1_world.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
