--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@
 DATABASE_TYPE=postgres
 DATABASE_NAME=postgres
 DATABASE_PORT=5432
-DATABASE_ADMIN_USER=postgres
-DATABASE_ADMIN_PASSWORD=AnAdminPassword
+DATABASE_PORT_DEVELOPMENT=5432
+
+# Application
+APP_ENV=development
